# gradenna

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
benchmarks/openems_refs/: README.md  farfield_e.csv  farfield_h.csv  generate_patch_refs.py  geometry.py  s11.csv  zin.csv
examples/: optimize_2d_antenna.py  optimize_3d_patch.py  optimize_beamsteering.py  optimize_directivity.py  optimize_multiband.py  patch_to_gerber.py  point_source.py
fab_campaign/: RUNBOOK.md  generate_fab.py
fab_campaign/gerber/: patch.drl  patch_bot_soldermask.gbr  patch_bottom_copper.gbr  patch_edge_cuts.gbr  patch_top_copper.gbr  patch_top_soldermask.gbr
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs  lib3d.rs  lib3d_sweeps.rs  pool.rs
scripts/: benchmark.py  build_kernel.sh  export_viz.py  nanovna_capture.py
src/gradenna/: __init__.py  constants.py  cpml.py  designs.py  dft_region.py  estimate.py  fab.py  fdtd2d.py  fdtd3d.py  freq_adjoint.py  grid.py  materials.py  measure.py  mom.py  monitors.py  native.py  native3d.py  ntff.py  platform.py  sources.py  sparams.py  topopt.py
tests/: conftest.py  test_beamsteering.py  test_cpml.py  test_cylindrical_wave.py  test_dft_region3d.py  test_fab.py  test_fdtd3d.py  test_float32_opt.py  test_freq_adjoint.py  test_freq_adjoint3d.py  test_geometry.py  test_gradients.py  test_measure.py  test_mom.py  test_native.py  test_native3d.py  test_native3d_region.py  test_ntff.py  test_openems_refs.py  test_optimization.py  test_patch_antenna.py  test_phase5.py  test_platform.py  test_ports.py  test_psi_strips.py  test_stability.py  test_topopt.py  test_topopt3d.py
web/app/: README.md  index.html  package-lock.json  package.json  shoot.mjs  tsconfig.json  vite.config.ts
web/app/public/data/: farfield3d.json  nearfield3d.json  optimization.json  s11.json
web/app/src/: colormaps.ts  main.ts  types.ts  ui.ts
web/app/src/views/: Antenna3DView.ts  FarField3DView.ts  LiveFdtdView.ts  OptimizationView.ts  S11View.ts
web/wasm-kernel/: .gitignore  Cargo.toml  README.md
web/wasm-kernel/pkg/: gradenna_wasm.d.ts  gradenna_wasm.js  gradenna_wasm_bg.wasm  gradenna_wasm_bg.wasm.d.ts  package.json
web/wasm-kernel/src/: lib.rs
