[project]
name = "gradenna"
version = "0.0.1"
description = "Differentiable FDTD antenna inverse design in JAX"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Shunsuke Hosomi" }]
keywords = [
    "fdtd",
    "antenna",
    "inverse-design",
    "topology-optimization",
    "jax",
    "electromagnetics",
    "adjoint",
    "rf",
    "microwave",
    "differentiable-simulation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.4.35",
    "numpy>=2.0",
    "scipy>=1.11",
    "optax>=0.2.8",
]

[project.optional-dependencies]
fab = [
    "scikit-image>=0.26.0",
    "shapely>=2.1.2",
    "gerber-writer>=0.4.3.3",
]
measure = ["scikit-rf>=1.12.0"]

[project.urls]
Repository = "https://github.com/s-hosomi/gradenna"
Issues = "https://github.com/s-hosomi/gradenna/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.8",
    "scikit-image>=0.26.0",
    "shapely>=2.1.2",
    "gerber-writer>=0.4.3.3",
    "scikit-rf>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gradenna"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: long-running convergence and strict-tolerance tests (deselect with -m 'not slow')",
]
